UX: Fix spacing in composer

--- a/scss/composer.scss
+++ b/scss/composer.scss
@@ -123,7 +123,6 @@
   }
   .title-and-category {
     box-sizing: border-box;
-    padding: 0 0 0 1em;
   }
 
   &:not(.show-preview) {
@@ -137,6 +136,7 @@
   }
   .submit-panel {
     padding: 0 1em;
+    margin-bottom: 8px;
   }
 }
 
